# mnemosyne

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  RULES.md  SEARCH_ANALYSIS.md  claude_desktop_config.json  docker-compose.ai-server.yml  docker-compose.homeserver.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  n8n-workflow-recall-tool.json  n8n-workflow-recall.json  n8n-workflow-smart-assistant.json  n8n-workflow-store.json  nginx.conf  openwebui_mnemosyne_integration.py  openwebui_mnemosyne_integration_v2.py  openwebui_mnemosyne_integration_v3.py  qdrant-config.yaml  test_filter_v2.py  test_memory_retrieval.py  test_openwebui_integration.py  test_optimization_validation.py
backend/: .pylintrc  Dockerfile  Dockerfile.prod  README.md  manage.py  mcp_server.py  mcp_server_fastmcp.py  memories_backup.json  package-lock.json  package.json  pytest.ini  requirements.txt
docs/: recall-quality-analysis.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
mcp-server/: Dockerfile  pyproject.toml
mcp-server/src/mnemosyne_mcp/: config.py  server.py
mcp-server/tests/: test_server.py
scripts/: backup-ai-server.sh  fix_embeddings.py  health-check-all.sh  health-check.sh  import-gemini.py  ingest-webui.py  pyproject.toml  start-server.sh  start_mcp_http.sh  start_mcp_server.sh  start_mcp_stdio.sh  test_token_fix.py
tests/: Dockerfile  conftest.py  pyproject.toml  test_conversation_integration.py  test_integration.py  test_retrieval_quality.py
(+194 files in other folders)
